Fix overflow

--- a/src/components/Tappable/Tappable.css
+++ b/src/components/Tappable/Tappable.css
@@ -18,6 +18,7 @@
  */
 .Tappable--android {
   position: relative;
+  overflow: hidden;
   transition: background-color .15s ease-out;
   }
 
